[tool.poetry]
name = "fs-walk"
version = "0.1.0"
description = "Walk file system and examine files."
authors = [
    "Ke Xue <xueke.kent@gmail.com>",
]
packages = [{ include = "**/*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.develop]
optional = false

[tool.poetry.group.develop.dependencies]
ipykernel = "^6.27.1"
lipsum = "*"
setuptools = "*"

[tool.poetry.group.linting]
optional = false

[tool.poetry.group.linting.dependencies]
flake8 = "7.1.0" # This version must be the same as in `./.pre-commit-config.yaml`.
mypy = "^1.6.1"
black = "24.4.2" # This version must be the same as in `./.pre-commit-config.yaml`.
pre-commit = "^3.7.0"

[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.10.0"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs]
optional = false

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "*"
sphinx-autodoc-typehints = "*"
sphinx-copybutton = "*"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report term-missing"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fs-walk"
version = "0.1.0"
authors = [
    { name = "Ke Xue", email = "xueke.kent@gmail.com" },
]
description = "Walk file system and examine files."
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fs_walk = ["py.typed"]
codegen = ["py.typed"]
